[tool.poetry]
name = "pubmed-cli"
version = "0.1.0"
description = "A CLI tool to fetch and filter PubMed papers"
authors = ["Gowri Charan <gowricharan16@gmail.com>"]
readme = "README.md"
packages = [{include = "pubmed_cli"}]  # ✅ Specify package location

[tool.poetry.dependencies]
python = ">=3.9,<3.13"  # Ensure Python version matches your system
requests = "^2.31.0"
pandas = "^2.2"

[tool.poetry.scripts]
get-papers-list = "pubmed_cli.cli:main"  # ✅ Update CLI entry point
